fix(menu): fix horizontal scrollbar in mobile menu

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -71,6 +71,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .header__nav-burger {
+    display: block;
+  }
+
   .header__nav-list {
     position: absolute;
     top: 8vh;
@@ -83,6 +87,12 @@
     align-items: center;
     z-index: 2;
     padding-top: 50px;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .header__nav-list--active {
+    transform: translateX(0);
   }
 
   .header__nav-list li {
