--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,3 +1,7 @@
+.body {
+  overflow-x: hidden;
+}
+
 .page {
   background-color: #ffffff;
   margin: 0 auto;
